fix: mobile popup collapse for previews

--- a/site/src/component/ResultPreview/ResultPreview.scss
+++ b/site/src/component/ResultPreview/ResultPreview.scss
@@ -90,6 +90,10 @@
   // Target the Twemoji wrapper since we can't add a class name to it
   > div:last-child {
     height: 100%;
+  }
+
+  .popup-scroll {
+    height: 100%;
     overflow: auto;
     padding: 24px;
 
